<resources>
    <string name="app_name">Password Manager</string>
    <string name="action_settings">Settings</string>

    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="email">E-Mail</string>
    <string name="title_activity_item_page">ItemPage</string>
    <string name="show_password">Show Password</string>
    <string name="service">Service</string>
    <string name="generate">Generate Password</string>
</resources>
