<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/service"
            android:textColor="@color/fore_color_heavy" />

        <EditText
            android:id="@+id/et_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/fore_color_heavy" />

        <TextView
            android:id="@+id/txt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/username"
            android:textColor="@color/fore_color_heavy" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/fore_color_heavy" />

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/name"
            android:textColor="@color/fore_color_heavy" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/fore_color_heavy" />

        <TextView
            android:id="@+id/txt_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/lastname"
            android:textColor="@color/fore_color_heavy" />

        <EditText
            android:id="@+id/et_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/fore_color_heavy" />

        <TextView
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/password"
            android:textColor="@color/fore_color_heavy" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/fore_color_heavy" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/show_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="@string/show_password"
                android:textColor="@color/title" />

            <Button
                android:id="@+id/generate_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:enabled="false"
                android:text="@string/generate"
                android:textColor="@color/title" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/email"
            android:textColor="@color/fore_color_heavy" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:textColor="@color/fore_color_heavy" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="Button"
                android:textColor="@color/title" />

            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text="Edit"
                android:textColor="@color/title" />
        </LinearLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>